[package]
name = "biir"
version = "1.2.1"
authors = ["Maks Rawski <maksymilian.rawski@tutanota.com>"]
edition = "2018"
description = "Brainfuck Interpreter In Rust"
license = "MIT"
repository = "https://gitlab.com/MaksRawski/biir"
homepage = "https://gitlab.com/MaksRawski/biir"
keywords = ["brainfuck", "interpreter"]
categories = ["command-line-utilities", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
clap = "2.33.3"
colored = "2"
unicode-segmentation = "1.1.0"

[dev-dependencies]
test-case = "1.1.0"
proptest = "1.0.0"
regex = "1"
